<resources>
    <string name="app_name">ScoreKeeperAPP</string>
    <string name="reset">reset</string>
    <string name="teama">TeamA</string>
    <string name="_0">0</string>
    <string name="_3">+3</string>
    <string name="_2">+2</string>
    <string name="_1">+1</string>
    <string name="AddFoul">Add Foul A</string>
    <string name="AddFoulB">Add Foul B</string>
    <string name="freeShot">Free Throw</string>
    <string name="teamB">TeamB</string>
    <string name="Fouls">Fouls A</string>
    <string name="FoulB">Fouls B</string>
</resources>
